--- a/index_1.html
+++ b/index_1.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <title>Assignment1.1</title>
-        <h1>My First sub-window</h1>
+        <center><h1>My First sub-window</h1>
     </head>
-    <bodd>
+        <center>
+    <body>
         <iframe src="https://www.google.com/webhp?igu=1" style = "height:200px;width:300px" >
         </iframe>
     </body>
