--- a/index_2.html
+++ b/index_2.html
@@ -1,9 +1,11 @@
+
 <html>
     <head>
         <title>Assignment1.2</title>
-        <h1>My First sub-window</h1>
+        <center><h1>My First sub-window</h1>
     </head>
-    <bodd>
+    <center>
+    <body>
         <iframe src="https://www.google.com/webhp?igu=1" style = "height:80%;width:80%" >
         </iframe>
     </body>
