--- a/index_3.html
+++ b/index_3.html
@@ -3,7 +3,7 @@
         <title>Assignment1.3</title>
         <h1>My First sub-window</h1>
     </head>
-    <bodd>
+    <body>
         <iframe src="" style = "height:80%;width:80%" name= "frame"></iframe><br>
         <div>
             <ol>
