--- a/index_4.html
+++ b/index_4.html
@@ -10,7 +10,7 @@
             document.getElementById("f").src = data;
         }
     </script>
-    <bodd>
+    <body>
             <input type = "text" id = "t">
             <input type ="button" onclick = "go()" value = "GO">
         <iframe src="" style = "height:80%;width:80%" name= "frame" id = "f"></iframe><br>
