--- a/index_5.html
+++ b/index_5.html
@@ -15,7 +15,7 @@
             document.getElementById("f").style.width = document.getElementById("w").value;
         }
     </script>
-    <bodd>
+    <body>
             URL<input type = "text" id = "t"><br>
             <input type ="button" onclick = "go()" value = "GO"><br>
             <div>
